...

  return (
    <StyledContainer>
      <StyledForm>
        <StyledWrapper>
          <StyledLogo source={logo} />
          <StyledTitle>Books</StyledTitle>
        </StyledWrapper>

        <Controller
          control={control}
          name="email"
          render={({field: {onChange, value}}) => (
...
